src/App.css
.App {
  text-align: center;
  background-color: #ffc400;
}

.App-logo {
  height: 5vmin;
  pointer-events: none;
  display: block;
  margin: 0 auto;
}

.App-header {
  background-color: #ffc400;
  min-height: 100vh;
  min-width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.albero {
  background: #0c692b;
  width: 15px;
  height: 15px;
  border-radius: 50%;
  box-shadow: 0 0 0 1.5px rgb(11, 54, 29);
}

@media (min-width: 0) {
  .rectangle {
    display: inline-block;
    text-align:center;
    width: 9vh;
    height: 9vh;
    background: #d50000;
    margin:5vw;
    position:relative;
    box-shadow: 4px 1px 3px 1.5px rgb(168, 125, 4);
    transform: rotate(20deg);
  }

}


@media (min-width: 600px) and (orientation:landscape) {

  .rectangle {
    display: inline-block;
    text-align:center;
    width: 9vw;
    height: 9vw;
    background: #d50000;
    margin:5vw;
    position:relative;
    box-shadow: 4px 1px 3px 1.5px rgb(168, 125, 4);
    transform: rotate(20deg);
  }

}


span {
  position: relative;
  display: inline-block;
  text-align:center;
  margin:5vw;
  margin-left:3vw;
  /* margin-top:25px; */
  transform: rotate(-20deg);
}

svg {
  position: relative;
  transform: rotate(180deg);
}

footer {
  left: 0;
  bottom: 0;
  width: 100vw;
  height: 13vh;
  background-color: #454545;
  color: white;
  text-align: center;
}

